attempt to fix spacing

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -81,8 +81,6 @@
 
   .social-icon {
     display: flex;
-    justify-content: flex-end;
-    gap: 12px;
 
     .twitter {
       display: inline-flex;
